--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>no.nav</groupId>
     <artifactId>vault-jdbc</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <name>Vault-JDBC</name>
@@ -138,7 +136,7 @@
         <developerConnection>scm:git:git@github.com:navikt/vault-jdbc.git</developerConnection>
         <connection>scm:git:git@github.com:navikt/vault-jdbc.git</connection>
         <url>https://github.com/navikt/vault-jdbc</url>
-        <tag>HEAD</tag>
+        <tag>vault-jdbc-1.0</tag>
     </scm>
 
     <dependencies>
