--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>no.nav</groupId>
     <artifactId>vault-jdbc</artifactId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Vault-JDBC</name>
@@ -136,7 +136,7 @@
         <developerConnection>scm:git:git@github.com:navikt/vault-jdbc.git</developerConnection>
         <connection>scm:git:git@github.com:navikt/vault-jdbc.git</connection>
         <url>https://github.com/navikt/vault-jdbc</url>
-        <tag>vault-jdbc-1.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <dependencies>
