--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,10 +28,9 @@ jobs:
       - name: Release Maven package
         env:
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
-          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
-          GPG_KEYNAME: ${{ secrets.GPG_KEYNAME }}
+          SONATYPE_TOKEN: ${{ secrets.SONATYPE_TOKEN }}
           GPG_KEYS: ${{ secrets.GPG_KEYS }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         run: |
-          export GPG_TTY=$(tty) && echo $GPG_KEYS | base64 --decode | gpg --fast-import --batch
+          export GPG_TTY=$(tty) && echo $GPG_KEYS | gpg --fast-import --batch
           mvn -B -Prelease --settings ./settings.xml deploy
