--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,5 +32,5 @@ jobs:
           GPG_KEYS: ${{ secrets.GPG_KEYS }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         run: |
-          export GPG_TTY=$(tty) && echo $GPG_KEYS | gpg --fast-import --batch
+          export GPG_TTY=$(tty) && echo -e "$GPG_KEYS" | gpg --fast-import --batch
           mvn -B -Prelease --settings ./settings.xml deploy
