--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,14 +2,15 @@ name: Test
 
 on:
   push:
+    branches-ignore:
+      - 'master'
   pull_request:
 
 jobs:
-  test:
-    name: Run tests
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout latest code
         uses: actions/checkout@v2
 
       - name: Set up JDK 11
@@ -17,12 +18,12 @@ jobs:
         with:
           java-version: 11
 
-      - name: Set up cache
+      - name: Setup build cache
         uses: actions/cache@v1
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-maven-
-
-      - name: Run tests
-        run: mvn clean install
+          restore-keys: |
+            ${{ runner.os }}-maven-
+      - name: Build with Maven
+        run: mvn -B clean install
