--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -32,10 +32,12 @@ jobs:
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         run: |
           mvn --no-transfer-progress --batch-mode release:prepare
-      - name: Perform release to Maven Central
+      - name: Release Maven package
         env:
           SONATYPE_USER: ${{ secrets.SONATYPE_USER }}
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+          GPG_KEYS: ${{ secrets.GPG_KEYS }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         run: |
-          mvn --no-transfer-progress --batch-mode release:perform
+          export GPG_TTY=$(tty) && echo -e "$GPG_KEYS" | gpg --fast-import --batch
+          mvn -B -Prelease --settings maven-settings.xml deploy
