--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -33,13 +33,15 @@ jobs:
           GPG_KEYS: ${{ secrets.GPG_KEYS }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
 
-        # The GITHUB_REF tag comes in the format 'refs/tags/xxx'.
-        # So if we split on '/' and take the 3rd value, we can get the release name.
         run: |
           export GPG_TTY=$(tty) && echo "$GPG_KEYS" | gpg --fast-import --batch
-          REPO_NAME=$(echo "$GITHUB_REPOSITORY" | awk -F / '{print $2}')
-          NEW_VERSION=$(echo "${GITHUB_REF}" | cut -d "/" -f3)
-          echo "-- Setting new release version ${NEW_VERSION} for ${REPO_NAME} --"
-          mvn -B versions:set -DnewVersion="${NEW_VERSION}" -DgenerateBackupPoms=false
+          echo "-- Setting new release version --"
+          mvn -B versions:set -DremoveSnapshot=true -DgenerateBackupPoms=false
           echo "-- Build, test and deploy release to Sonatype --"
           mvn -B --settings maven-settings.xml clean deploy -Prelease -Dmaven.wagon.http.pool=false
+          echo "-- Setting next snapshot version --"
+          mvn -B versions:set -DnextSnapshot=true -DgenerateBackupPoms=false
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
+          git add pom.xml
+          git commit -m 'prepare next snapshot version'
